--- a/sample/styles/styles.css
+++ b/sample/styles/styles.css
@@ -174,3 +174,22 @@ div.au-stagger {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
+
+.box {
+    margin: 4.5em 0;
+    padding: 3em;
+    background-color: rgba(20,53,80,0.038);
+    border: 1px solid rgba(20,53,80,0.05);
+}
+
+.console div
+{
+    background-position: 6px -95px;
+    border-bottom: 1px solid #DDD;
+    padding: 5px 10px;
+    height: 2em;
+    line-height: 2em;
+    vertical-align: middle;
+    color: #333;
+    font: 11px Consolas, Monaco, "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
+}
