--- a/sample/styles/styles.css
+++ b/sample/styles/styles.css
@@ -193,3 +193,7 @@ div.au-stagger {
     color: #333;
     font: 11px Consolas, Monaco, "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
 }
+
+.gitter-open-chat-button {
+  display: none;
+}
