fix style selector
closes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/167

--- a/sample/styles/styles.css
+++ b/sample/styles/styles.css
@@ -197,3 +197,13 @@ div.au-stagger {
 .gitter-open-chat-button {
   display: none;
 }
+
+.theme-window {
+  background-color: #ebeef0;
+}
+
+.tc-theme-list {
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
