increase fontsize of panelbar
fixes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/216

--- a/sample/styles/styles.css
+++ b/sample/styles/styles.css
@@ -224,3 +224,7 @@ menu {
 .k-button:focus:not(.k-state-disabled):not([disabled]), .k-menu .k-item>.k-link:focus {
   text-decoration: none;
 }
+
+.help-docs .k-header {
+  font-size: 18px;
+}
