--- a/sample/src/samples/button/basic-use.css
+++ b/sample/src/samples/button/basic-use.css
@@ -1,10 +1,10 @@
-.demo-section p {
+.btn-basic-use .demo-section p {
     margin: 0 0 30px;
     line-height: 50px;
 }
-.demo-section p .k-button {
+.btn-basic-use .demo-section p .k-button {
     margin: 0 10px 0 0;
 }
-.k-primary {
+.btn-basic-use .k-primary {
     min-width: 150px;
 }
