fix sparkline basic use
closes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/177

--- a/sample/src/samples/charts/sparkline/basic-use.css
+++ b/sample/src/samples/charts/sparkline/basic-use.css
@@ -38,13 +38,7 @@
     width: 34px;
     font-size: 10px;
 }
-#stats-mon,
-#stats-tue,
-#stats-wed,
-#stats-thu,
-#stats-fri,
-#stats-sat,
-#stats-sun {
+#sparkline-basicuse .pie-list k-sparkline {
     display: block;
     width: 34px;
     line-height: 30px;
