--- a/sample/styles/styles.css
+++ b/sample/styles/styles.css
@@ -244,3 +244,9 @@ menu {
 h1, .h1, h2, .h2, h3, .h3 {
   margin-top: 0 !important;
 }
+
+/* show all line numbers */
+li.L0, li.L1, li.L2, li.L3,
+li.L5, li.L6, li.L7, li.L8 {
+  list-style-type: decimal !important
+}
