--- a/sample/src/samples/colorpicker/basic-use.css
+++ b/sample/src/samples/colorpicker/basic-use.css
@@ -1,34 +1,34 @@
-.demo-section {
-            height: 600px;
-            width: 600px;
-        }
+#colorpicker-basicuse .demo-section {
+    height: 600px;
+    width: 600px;
+}
 
-        #background {
-            background: transparent url(http://demos.telerik.com/kendo-ui/content/web/colorpicker/interior-bg.png) no-repeat;
-            margin: 0 auto;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
+#colorpicker-basicuse #background {
+    background: transparent url(http://demos.telerik.com/kendo-ui/content/web/colorpicker/interior-bg.png) no-repeat;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
 
-        .column {
-            margin-top: 384px;
-            float: left;
-            width: 300px;
-            text-align: center;
-        }
+#colorpicker-basicuse .column {
+    margin-top: 384px;
+    float: left;
+    width: 300px;
+    text-align: center;
+}
 
-        .column .title {
-            color: #a3a3a3;
-            text-transform: uppercase;
-            font-size: 11px;
-            font-weight: normal;
-            padding: 41px 0 20px;
-        }
+#colorpicker-basicuse .column .title {
+    color: #a3a3a3;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: normal;
+    padding: 41px 0 20px;
+}
 
-        #palette {
-            vertical-align: top;
-            display: inline-block;
-        }
+#colorpicker-basicuse #palette {
+    vertical-align: top;
+    display: inline-block;
+}
 
-        .k-colorpicker { vertical-align: top; margin: 20px 0; }
+#colorpicker-basicuse .k-colorpicker { vertical-align: top; margin: 20px 0; }
