--- a/sample/src/samples/colorpicker/standalone.css
+++ b/sample/src/samples/colorpicker/standalone.css
@@ -1,13 +1,13 @@
-.demo-section {
+#colorpicker-standalone .demo-section {
     overflow: hidden;
     padding: 0;
 }
 
-.product-display, .product-info {
+#colorpicker-standalone .product-display, .product-info {
     float: left;
 }
 
-.product-display {
+#colorpicker-standalone .product-display {
     background-color: #fff;
     background-image: url();
     height: 380px;
@@ -16,48 +16,48 @@
     text-align: center;
 }
 
-.product-image {
+#colorpicker-standalone .product-image {
     display: block;
     margin: 56px auto;
 }
 
-.product-info {
+#colorpicker-standalone .product-info {
     width: 300px;
 }
 
-.product-info h3 {
+#colorpicker-standalone .product-info h3 {
     font-size: 1.5em;
     padding: 1.615em 0 .6em;
 }
 
-.product-info dl {
+#colorpicker-standalone .product-info dl {
     margin: 2em 0;
     overflow: hidden;
 }
 
-.product-info dt,
-.product-info dd {
+#colorpicker-standalone .product-info dt,
+#colorpicker-standalone .product-info dd {
     float: left;
     margin: 0;
     padding: 0 0 .7em 0;
 }
 
-.product-info dt {
+#colorpicker-standalone .product-info dt {
     font-weight: bold;
     width: 34%;
     text-align: right;
     padding-right: 2.4%;
 }
 
-.product-info dt:after {
+#colorpicker-standalone .product-info dt:after {
     content: ":";
 }
 
-.product-info dd {
+#colorpicker-standalone .product-info dd {
     width: 63.6%;
 }
 
-.product-info button {
+#colorpicker-standalone .product-info button {
     width: 60%;
     height: 32px;
     text-align: center;
