--- a/sample/src/samples/dropdownlist/customizing-templates.css
+++ b/sample/src/samples/dropdownlist/customizing-templates.css
@@ -22,7 +22,7 @@
     border-radius: 50%;
 }
 
-#dropdownlist-templates #customers-list .k-item {
+#dropdownlist-templates #customersdropdown-list .k-item {
     line-height: 1em;
     min-width: 300px;
 }
@@ -37,7 +37,7 @@
     border-left: 0;
 }
 
-#dropdownlist-templates #customers-list .k-item > span {
+#customersdropdown-list .k-item > span {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -46,7 +46,7 @@
     margin: 20px 10px 10px 5px;
 }
 
-#dropdownlist-templates #customers-list .k-item > span:first-child {
+#customersdropdown-list .k-item > span:first-child {
     -moz-box-shadow: inset 0 0 30px rgba(0,0,0,.3);
     -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,.3);
     box-shadow: inset 0 0 30px rgba(0,0,0,.3);
@@ -58,14 +58,14 @@
     background-repeat: no-repeat;
 }
 
-#dropdownlist-templates #customers-list h3 {
+#customersdropdown-list h3 {
     font-size: 1.2em;
     font-weight: normal;
     margin: 0 0 1px 0;
     padding: 0;
 }
 
-#dropdownlist-templates #customers-list p {
+#customersdropdown-list p {
     margin: 0;
     padding: 0;
     font-size: .8em;
