--- a/sample/src/samples/datetimepicker/customizing-templates.css
+++ b/sample/src/samples/datetimepicker/customizing-templates.css
@@ -1,4 +1,4 @@
-.birthday {
+#datetimepicker-customizing-templates_dateview .birthday {
   background: transparent url(http://demos.telerik.com/kendo-ui/content/web/calendar/cake.png) no-repeat 0 50%;
   display: inline-block;
   width: 16px;
