--- a/sample/src/samples/autocomplete/customizing-templates.css
+++ b/sample/src/samples/autocomplete/customizing-templates.css
@@ -1,33 +1,33 @@
-.dropdown-header {
+#autocomplete-customizing-templates-customers-list .dropdown-header {
     border-width: 0 0 1px 0;
     text-transform: uppercase;
 }
 
-.dropdown-header > span {
+#autocomplete-customizing-templates-customers-list .dropdown-header > span {
     display: inline-block;
     padding: 10px;
 }
 
-.dropdown-header > span:first-child {
+#autocomplete-customizing-templates-customers-list .dropdown-header > span:first-child {
     width: 50px;
 }
 
-#customers-list .k-item {
+#autocomplete-customizing-templates-customers-list .k-item {
     line-height: 1em;
     min-width: 300px;
 }
 
 /* Material Theme padding adjustment*/
 
-.k-material #customers-list .k-item,
-.k-material #customers-list .k-item.k-state-hover,
-.k-materialblack #customers-list .k-item,
-.k-materialblack #customers-list .k-item.k-state-hover {
+.k-material #autocomplete-customizing-templates-customers-list .k-item,
+.k-material #autocomplete-customizing-templates-customers-list .k-item.k-state-hover,
+.k-materialblack #autocomplete-customizing-templates-customers-list .k-item,
+.k-materialblack #autocomplete-customizing-templates-customers-list .k-item.k-state-hover {
     padding-left: 5px;
     border-left: 0;
 }
 
-#customers-list .k-item > span {
+#autocomplete-customizing-templates-customers-list .k-item > span {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -36,7 +36,7 @@
     margin: 20px 10px 10px 5px;
 }
 
-#customers-list .k-item > span:first-child {
+#autocomplete-customizing-templates-customers-list .k-item > span:first-child {
     -moz-box-shadow: inset 0 0 30px rgba(0,0,0,.3);
     -webkit-box-shadow: inset 0 0 30px rgba(0,0,0,.3);
     box-shadow: inset 0 0 30px rgba(0,0,0,.3);
@@ -48,14 +48,14 @@
     background-repeat: no-repeat;
 }
 
-#customers-list h3 {
+#autocomplete-customizing-templates-customers-list h3 {
     font-size: 1.2em;
     font-weight: normal;
     margin: 0 0 1px 0;
     padding: 0;
 }
 
-#customers-list p {
+#autocomplete-customizing-templates-customers-list p {
     margin: 0;
     padding: 0;
     font-size: .8em;
