--- a/sample/src/samples/colorpicker/flat.css
+++ b/sample/src/samples/colorpicker/flat.css
@@ -1,41 +1,41 @@
-.demo-section {
+#colorpicker-flat .demo-section {
     text-align: center;
     padding: 0 0 16px;
 }
 
-#bike {
+#colorpicker-flat #bike {
     margin: 0 0 10px;
     background: url(http://demos.telerik.com/kendo-ui/content/web/colorpicker/background.png);
 }
 
-#bike-head, #bike-tail {
+#colorpicker-flat #bike-head, #colorpicker-flat #bike-tail {
     background: url(http://demos.telerik.com/kendo-ui/content/web/colorpicker/motor.png);
     display: inline-block;
     height: 299px;
     width: 241px;
 }
 
-#bike-tail {
+#colorpicker-flat #bike-tail {
     background-color: #000;
 }
 
-#bike-head {
+#colorpicker-flat #bike-head {
     background-color: #e15613;
     background-position: -241px 0;
 }
 
-.picker-wrapper {
+#colorpicker-flat .picker-wrapper {
     display: inline-block;
     text-align: left;
     width: 252px;
     margin: 0 18px;
 }
 
-.picker-wrapper .k-hsv-gradient {
+#colorpicker-flat .picker-wrapper .k-hsv-gradient {
     height: 140px;
 }
 
-.picker-wrapper h3 {
+#colorpicker-flat .picker-wrapper h3 {
     padding: 13px 0 5px;
     text-align: left;
 }
