--- a/sample/src/samples/menu/basic-use.css
+++ b/sample/src/samples/menu/basic-use.css
@@ -1,34 +1,34 @@
-#megaStore {
+#menu-basic-use k-menu {
     max-width: 600px;
     margin: 30px auto;
     padding-top: 120px;
     background: url('http://demos.telerik.com/kendo-ui/content/web/menu/header.jpg') no-repeat center 0;
 }
-#menu h2 {
+#menu-basic-use #menu h2 {
     font-size: 1em;
     text-transform: uppercase;
     padding: 5px 10px;
 }
-#template img {
+#menu-basic-use #template img {
     margin: 5px 20px 0 0;
     float: left;
 }
-#template {
+#menu-basic-use #template {
     width: 380px;
 }
-#template ol {
+#menu-basic-use #template ol {
     float: left;
     margin: 0 0 0 30px;
     padding: 10px 10px 0 10px;
 }
-#template:after {
+#menu-basic-use #template:after {
     content: ".";
     display: block;
     height: 0;
     clear: both;
     visibility: hidden;
 }
-#template .k-button {
+#menu-basic-use #template .k-button {
     float: left;
     clear: left;
     margin: 5px 0 5px 12px;
