--- a/sample/styles/styles.css
+++ b/sample/styles/styles.css
@@ -246,3 +246,7 @@ li.L0, li.L1, li.L2, li.L3,
 li.L5, li.L6, li.L7, li.L8 {
   list-style-type: decimal !important
 }
+
+#exampleWrap li {
+  list-style-type: none;
+}
