feat(all): add QR Code

--- a/sample/src/samples/barcode/api.css
+++ b/sample/src/samples/barcode/api.css
@@ -1,7 +1,7 @@
-#button-api .demo-section {
+#barcode-api .demo-section {
     text-align: center;
 }
-#button-api .box .k-textbox {
+#barcode-api .box .k-textbox {
     margin: 0;
     width: 80px;
 }
