--- a/sample/src/samples/qrcode/basic-use.css
+++ b/sample/src/samples/qrcode/basic-use.css
@@ -1,21 +1,10 @@
-#barcode-basic-use #dairy {
-    margin: 0;
-    padding: 30px 0;
-    list-style-type: none;
-}
-#barcode-basic-use #dairy li {
+#qrcode-basic-use .demo-section {
     display: inline-block;
-    padding: 10px;
-    margin: 6px;
-    background-color: #fff;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+    margin: 15px 30px 15px 0;
 }
-#barcode-basic-use #dairy li span, #barcode-basic-use #dairy li img {
-    margin: 0;
-    padding: 0;
-}
-#barcode-basic-use #dairy li img {
-    margin: 40px;
+
+#qrcode-basic-use .k-qrcode {
+    display:inline-block;
+    margin: 10px 0 0;
+    border: none;
 }
